chore: adjusting db context, docker file and interfaces

--- a/Microservices/Expenses/Expenses.API/appsettings.Development.json
+++ b/Microservices/Expenses/Expenses.API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "ExpensesDbConnection": "Server=localhost;Database=Expenses;User Id=sa;Password=YouCannotSeThis;"
+    "ExpensesDbConnection": "Server=localhost;Database=Expenses;User Id=sa;Password=P@ssw0rd!;"
   }
 }
