--- a/Microservices/Expenses/Expenses.Application/Expenses.Application.csproj
+++ b/Microservices/Expenses/Expenses.Application/Expenses.Application.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\Expenses.Domain\Expenses.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
