--- a/Microservices/Expenses/Expenses.Data/Expenses.Data.csproj
+++ b/Microservices/Expenses/Expenses.Data/Expenses.Data.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\FinanceControlinator.Common\FinanceControlinator.Common.csproj" />
     <ProjectReference Include="..\Expenses.Domain\Expenses.Domain.csproj" />
   </ItemGroup>
 
