--- a/Microservices/Expenses/Expenses.Domain/Expenses.Domain.csproj
+++ b/Microservices/Expenses/Expenses.Domain/Expenses.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\FinanceControlinator.Common\FinanceControlinator.Common.csproj" />
+  </ItemGroup>
+
 </Project>
