feat: starting kubernetes files

--- a/Microservices/Expenses/Expenses.API/Properties/launchSettings.json
+++ b/Microservices/Expenses/Expenses.API/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "ExpenseAPI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "expense",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -29,9 +29,9 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/expense",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": false
     }
   }
 }
