--- a/infra/k8s/dev/ingress-srv.yml
+++ b/infra/k8s/dev/ingress-srv.yml
@@ -1,24 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-service
+  name: ingress-srv
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
-  defaultBackend:
-    service:
-      name: expenses-srv
-      port:
-        number: 80
   rules:
-    - host: localhost     
+    - host: local.test
       http:
         paths:
-          - path: /expense
+          - path: /api/expenses/?(.*)
             pathType: Prefix
             backend:
               service:
                 name: expenses-srv
-                port: 
-                    number: 80
+                port:
+                  number: 80
