--- a/Microservices/Expenses/Expenses.Domain/Expenses.Domain.csproj
+++ b/Microservices/Expenses/Expenses.Domain/Expenses.Domain.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\FinanceControlinator.Common\FinanceControlinator.Common.csproj" />
   </ItemGroup>
 
