--- a/.github/workflows/expenses.tests.pull-request.yml
+++ b/.github/workflows/expenses.tests.pull-request.yml
@@ -1,10 +1,10 @@
 name: .NET
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
+    paths:
+    - 'Microservices/Expenses/**'
 
 jobs:
   build:
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore Microservices\Expenses\Expenses.Tests\
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build Microservices\Expenses\Expenses.Tests\ --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test Microservices\Expenses\Expenses.Tests\ --no-build --verbosity normal
