--- a/Microservices/Expenses/Expenses.API/appsettings.Development.json
+++ b/Microservices/Expenses/Expenses.API/appsettings.Development.json
@@ -8,5 +8,10 @@
   },
   "ConnectionStrings": {
     "ExpensesDbConnection": "Server=localhost;Database=Expenses;User Id=sa;Password=P@ssw0rd!;"
+  },
+  "RabbitMq": {
+    "Host": "amqp://127.0.0.1:5672/",
+    "Password": "96xuOJMKYf",
+    "Username": "user"
   }
 }
