--- a/.github/workflows/expenses.dev.heroku.ci.yml
+++ b/.github/workflows/expenses.dev.heroku.ci.yml
@@ -1,9 +1,7 @@
 name: docker-push-expenses
 
 on:
-  workflow_run:
-    branches:
-      - development
+  workflow_dispatch:
 jobs:
   deploy-dev:
     runs-on: ubuntu-latest
