--- a/.github/workflows/expenses.dev.heroku.ci.yml
+++ b/.github/workflows/expenses.dev.heroku.ci.yml
@@ -1,14 +1,7 @@
 name: docker-push-expenses
 
-on:
-  workflow_dispatch:
-   inputs:
-      logLevel:
-        description: 'Log level'     
-        required: true
-        default: 'warning'
-      tags:
-        description: 'Test scenario tags'  
+on: workflow_dispatch
+   
 jobs:
   deploy-dev:
     runs-on: ubuntu-latest
