--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,23 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+steps:
+- task: HelmInstaller@0
+  inputs:
+    helmVersion: '2.14.1'
+    installKubectl: true
+
+
+- task: HelmDeploy@0
+  inputs:
+    chartPath: '.\infra\helm\expenses'
+    releaseName: 'expenses'
+    connectionType: 'Azure Resource Manager'
+    azureSubscription: 'Pago pelo Uso(8ebc5ad7-9fb5-49ae-a450-3937c5516386)'
+    azureResourceGroup: 'finance-controlinator'
+    kubernetesCluster: 'finance-controlinator-aks'
+    command: 'install'
+    
+
+
