--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,23 +10,29 @@ pool:
   vmImage: ubuntu-latest
 
 
-steps:
+stages:
+- stage: Instal Helm
+  jobs:
+  - job: 
+    steps:
+    - task: HelmInstaller@0
+      inputs:
+        helmVersion: '2.14.1'
+        installKubectl: true
 
-
-- task: HelmInstaller@0
-  inputs:
-    helmVersion: '2.14.1'
-    installKubectl: true
-    
-- task: HelmDeploy@0
-  inputs:
-    chartPath: '.\infra\helm\expenses'
-    releaseName: 'expenses'
-    connectionType: 'Azure Resource Manager'
-    azureSubscription: 'Pago pelo Uso(8ebc5ad7-9fb5-49ae-a450-3937c5516386)'
-    azureResourceGroup: 'finance-controlinator'
-    kubernetesCluster: 'finance-controlinator-aks'
-    command: 'install'
+- stage: Run Helm
+  jobs:
+  - job: 
+    steps:
+    - task: HelmDeploy@0
+      inputs:
+        chartPath: '.\infra\helm\expenses'
+        releaseName: 'expenses'
+        connectionType: 'Azure Resource Manager'
+        azureSubscription: 'Pago pelo Uso(8ebc5ad7-9fb5-49ae-a450-3937c5516386)'
+        azureResourceGroup: 'finance-controlinator'
+        kubernetesCluster: 'finance-controlinator-aks'
+        command: 'install'
     
 
 
