--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,30 +9,15 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+steps:
 
-stages:
-- stage: install_helm
-  jobs:
-  - job: 
-    steps:
-    - task: HelmInstaller@0
-      inputs:
-        helmVersion: '2.14.1'
-        installKubectl: true
-
-- stage: deploy_expenses
-  jobs:
-  - job: 
-    steps:
-    - task: HelmDeploy@0
-      inputs:
-        chartPath: '.\infra\helm\expenses'
-        releaseName: 'expenses'
-        connectionType: 'Azure Resource Manager'
-        azureSubscription: 'Pago pelo Uso(8ebc5ad7-9fb5-49ae-a450-3937c5516386)'
-        azureResourceGroup: 'finance-controlinator'
-        kubernetesCluster: 'finance-controlinator-aks'
-        command: 'install'
+- task: HelmDeploy@0
+  inputs:
+    command: 'package'
+    chartPath: 'infra/helm/expenses'
     
-
-
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
