--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,11 @@ steps:
     command: 'package'
     chartPath: 'infra/helm/expenses'
     
+- task: HelmDeploy@0
+  inputs:
+    command: 'package'
+    chartPath: 'infra/helm/ingress'
+    
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
