--- a/infra/helm/ingress/Chart.yaml
+++ b/infra/helm/ingress/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: expenses
-description: A Helm for Expenses microservices
+name: ingress
+description: A Helm for Ingress-nginx 
 
 # A chart can be either an 'application' or a 'library' chart.
 #
