--- a/infra/helm/ingress/templates/ingress-srv.yml
+++ b/infra/helm/ingress/templates/ingress-srv.yml
@@ -13,6 +13,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: expenses-srv
+                name: {{ .Values.expenseServiceName }}
                 port:
                   number: 80
