--- a/Microservices/Expenses/Expenses.Domain/Expenses.Domain.csproj
+++ b/Microservices/Expenses/Expenses.Domain/Expenses.Domain.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\FinanceControlinator.Common\FinanceControlinator.Common.csproj" />
+    <ProjectReference Include="..\..\..\Common\FinanceControlinator.Common\FinanceControlinator.Common.csproj" />
   </ItemGroup>
 
 </Project>
