chore: adjusitng common folder and assure only one set connections string valiable on api deployment

--- a/Microservices/Expenses/Expenses.Handler/Expenses.Handler.csproj
+++ b/Microservices/Expenses/Expenses.Handler/Expenses.Handler.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\FinanceControlinator.Common\FinanceControlinator.Common.csproj" />
     <ProjectReference Include="..\..\..\Common\FinanceControlinator.Events\FinanceControlinator.Events.csproj" />
-    <ProjectReference Include="..\..\..\FinanceControlinator.Common\FinanceControlinator.Common.csproj" />
     <ProjectReference Include="..\Expenses.Application\Expenses.Application.csproj" />
     <ProjectReference Include="..\Expenses.Application\Expenses.Application.csproj" />
   </ItemGroup>
