chore: receiving messages to invoice microservice and store expenses on ravendb database

--- a/Microservices/Expenses/Expenses.API/appsettings.Development.json
+++ b/Microservices/Expenses/Expenses.API/appsettings.Development.json
@@ -11,7 +11,9 @@
   },
   "RabbitMq": {
     "Host": "amqp://127.0.0.1:5672/",
-    "Password": "96xuOJMKYf",
-    "Username": "user"
+    "_Password": "96xuOJMKYf",
+    "_Username": "user",
+    "Password": "guest",
+    "Username": "guest"
   }
 }
