--- a/Microservices/Invoice/Invoices.API/Invoices.API.csproj
+++ b/Microservices/Invoice/Invoices.API/Invoices.API.csproj
@@ -32,5 +32,9 @@
     <ProjectReference Include="..\Invoices.Handler\Invoices.Handler.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 
 </Project>
