--- a/Microservices/Invoice/Invoices.API/appsettings.Development.json
+++ b/Microservices/Invoice/Invoices.API/appsettings.Development.json
@@ -7,11 +7,15 @@
     }
   },
   "ConnectionStrings": {
-    "InvoicesDbConnection": "Server=localhost;Database=Invoices;User Id=sa;Password=P@ssw0rd!;"
+    "InvoicesDbConnection": "http://localhost:8080",
+    "InvoicesDbName": "Invoices"
   },
   "RabbitMq": {
     "Host": "amqp://127.0.0.1:5672/",
-    "Password": "96xuOJMKYf",
-    "Username": "user"
+    "_Password": "96xuOJMKYf",
+    "_Username": "user",
+    "Password": "guest",
+    "Username": "guest"
+
   }
 }
