--- a/.github/workflows/invoices.docker.push.yml
+++ b/.github/workflows/invoices.docker.push.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - 'Microservices/Invoice/**'
+      - 'Microservices/Invoices/**'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,6 +15,6 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -f "./Microservices/Invoice/Invoices.API/Dockerfile" --force-rm -t gumberss/financecontrolinator-invoices .
+      - run: docker build -f "./Microservices/Invoices/Invoices.API/Dockerfile" --force-rm -t gumberss/financecontrolinator-invoices .
       - run: docker push gumberss/financecontrolinator-invoices
       
