--- a/Microservices/Invoices/Invoices.Tests/Invoices.Tests.csproj
+++ b/Microservices/Invoices/Invoices.Tests/Invoices.Tests.csproj
@@ -11,14 +11,16 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="FluentAssertions" Version="6.0.0-beta0001" />
+    <PackageReference Include="FluentAssertions" Version="6.0.0-beta0002" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Invoices.Application\Invoices.Application.csproj" />
     <ProjectReference Include="..\Invoices.Domain\Invoices.Domain.csproj" />
   </ItemGroup>
 
