--- a/Microservices/Expenses/Expenses.API/appsettings.Development.json
+++ b/Microservices/Expenses/Expenses.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "ExpensesDbConnection": "Server=localhost;Database=Expenses;User Id=sa;Password=P@ssw0rd!;"
+    "ExpensesDbConnection": "Server=localhost;Database=Expenses;User Id=sa;Password=AewYouKiddingMe;"
   },
   "RabbitMq": {
     "Host": "amqp://127.0.0.1:5672/",
