--- a/infra/dev/docker-compose.yml
+++ b/infra/dev/docker-compose.yml
@@ -33,5 +33,5 @@ services:
     ports:
       - "1433:1433"
     environment:
-      SA_PASSWORD: "P@ssw0rd!"
+      SA_PASSWORD: "HereWeGoAgain"
       ACCEPT_EULA: "Y"
