chore: make payments microservice start working

--- a/Microservices/Payments/Payments.API/appsettings.Development.json
+++ b/Microservices/Payments/Payments.API/appsettings.Development.json
@@ -7,12 +7,12 @@
     }
   },
   "ConnectionStrings": {
-    "InvoicesDbConnection": "http://localhost:8080",
-    "InvoicesDbName": "Payments"
+    "PaymentsDbConnection": "http://localhost:10000",
+    "PaymentsDbName": "Payments"
   },
   "RabbitMq": {
     "Host": "amqp://127.0.0.1:5672/",
-    "Password": "96xuOJMKYf",
-    "Username": "user"
+    "Password": "guest",
+    "Username": "guest"
   }
 }
