--- a/Microservices/Accounts/Accounts.Domain/Accounts.Domain.csproj
+++ b/Microservices/Accounts/Accounts.Domain/Accounts.Domain.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\..\..\Common\FinanceControlinator.Common\FinanceControlinator.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\Validators\" />
+    <Folder Include="Validators\" />
+  </ItemGroup>
+
 </Project>
