chore: adding the most important thing in this project, the "zoeira"

--- a/Microservices/Accounts/Accounts.API/appsettings.Development.json
+++ b/Microservices/Accounts/Accounts.API/appsettings.Development.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "AccountsDbConnection": "http://localhost:10001",
-    "AccountsDbName": "Accounts"
+    "EndpointUri": "Are you kidding me",
+    "PrimaryKey": "Thinking I would expose here?"
   },
   "RabbitMq": {
     "Host": "amqp://127.0.0.1:5672/",
