--- a/Common/FinanceControlinator.Common/FinanceControlinator.Common.csproj
+++ b/Common/FinanceControlinator.Common/FinanceControlinator.Common.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
