--- a/Microservices/Accounts/Accounts.API/appsettings.Development.json
+++ b/Microservices/Accounts/Accounts.API/appsettings.Development.json
@@ -7,8 +7,13 @@
     }
   },
   "ConnectionStrings": {
+
+  },
+  "DbConnection": {
     "EndpointUri": "Are you kidding me",
-    "PrimaryKey": "Thinking I would expose here?"
+    "PrimaryKey": "Thinking I would expose here?",
+    "DatabaseName": "Accounts",
+    "ContainerName": "AccountsContainer"
   },
   "RabbitMq": {
     "Host": "amqp://127.0.0.1:5672/",
