--- a/Microservices/Accounts/Accounts.API/Properties/launchSettings.json
+++ b/Microservices/Accounts/Accounts.API/Properties/launchSettings.json
@@ -17,6 +17,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5007;http://localhost:5006"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": false
     }
   }
 }
