chore: removing development app settings

--- a/Microservices/Accounts/Accounts.API/appsettings.json
+++ b/Microservices/Accounts/Accounts.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +7,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+
+  },
+  "DbConnection": {
+    "EndpointUri": "Are you kidding me",
+    "PrimaryKey": "Thinking I would expose here?",
+
+    "DatabaseName": "Accounts",
+    "ContainerName": "AccountsContainer"
+  },
+  "RabbitMq": {
+    "Host": "amqp://127.0.0.1:5672/",
+    "Password": "guest",
+    "Username": "guest"
+  }
 }
