--- a/infra/dev/docker-compose.yml
+++ b/infra/dev/docker-compose.yml
@@ -51,5 +51,5 @@ services:
     ports:
       - "1433:1433"
     environment:
-      SA_PASSWORD: "P@ssw0rd!"
+      SA_PASSWORD: "YouF@undMe!"
       ACCEPT_EULA: "Y"
