--- a/Microservices/Accounts/Accounts.Tests/Accounts.Tests.csproj
+++ b/Microservices/Accounts/Accounts.Tests/Accounts.Tests.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Accounts.Domain\Accounts.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\" />
+  </ItemGroup>
+
 </Project>
