--- a/Microservices/Expenses/Expenses.Tests/Expenses.Tests.csproj
+++ b/Microservices/Expenses/Expenses.Tests/Expenses.Tests.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\FinanceControlinator.Tests\FinanceControlinator.Tests.csproj" />
     <ProjectReference Include="..\Expenses.Domain\Expenses.Domain.csproj" />
   </ItemGroup>
 
