--- a/Microservices/Invoices/Invoices.Tests/Invoices.Tests.csproj
+++ b/Microservices/Invoices/Invoices.Tests/Invoices.Tests.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\FinanceControlinator.Tests\FinanceControlinator.Tests.csproj" />
     <ProjectReference Include="..\Invoices.Application\Invoices.Application.csproj" />
     <ProjectReference Include="..\Invoices.Domain\Invoices.Domain.csproj" />
   </ItemGroup>
