--- a/Microservices/Payments/Payments.Tests/Payments.Tests.csproj
+++ b/Microservices/Payments/Payments.Tests/Payments.Tests.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Payments.Domain\Payments.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\" />
+  </ItemGroup>
+
 </Project>
