chore: adding piggy bank to dev docker compose

--- a/Microservices/Expenses/Expenses.API/appsettings.Development.json
+++ b/Microservices/Expenses/Expenses.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "ExpensesDbConnection": "Server=localhost;Database=Expenses;User Id=sa;Password=HereWeGoAgain;"
+    "ExpensesDbConnection": "Server=localhost;Database=Expenses;User Id=sa;Password=HereWeG0Again!;"
   },
   "RabbitMq": {
     "Host": "amqp://127.0.0.1:5672/",
