--- a/infra/Microservice Creator/Template/Expenses/Expenses.API/appsettings.Development.json
+++ b/infra/Microservice Creator/Template/Expenses/Expenses.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "ExpensesDbConnection": "Server=localhost;Database=Expenses;User Id=sa;Password=P@ssw0rd!;"
+    "ExpensesDbConnection": "Server=localhost;Database=Expenses;User Id=sa;Password=LeaveMe@l0ne!;"
   },
   "RabbitMq": {
     "Host": "amqp://127.0.0.1:5672/",
