--- a/Microservices/PiggyBanks/PiggyBanks.Domain/PiggyBanks.Domain.csproj
+++ b/Microservices/PiggyBanks/PiggyBanks.Domain/PiggyBanks.Domain.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Interfaces\Validators\" />
     <Folder Include="Validators\" />
   </ItemGroup>
 
