--- a/.github/workflows/piggy-banks.tests.pull-request.yml
+++ b/.github/workflows/piggy-banks.tests.pull-request.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
-      with:expenses.tests.pull-request.yml
+      with: 
         dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore Microservices/PiggyBanks/PiggyBanks.Tests/PiggyBanks.Tests.csproj
