--- a/Microservices/PiggyBanks/PiggyBanks.Tests/PiggyBanks.Tests.csproj
+++ b/Microservices/PiggyBanks/PiggyBanks.Tests/PiggyBanks.Tests.csproj
@@ -13,12 +13,14 @@
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="6.0.0-beta0001" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PiggyBanks.Application\PiggyBanks.Application.csproj" />
     <ProjectReference Include="..\PiggyBanks.Domain\PiggyBanks.Domain.csproj" />
   </ItemGroup>
 
