--- a/Microservices/PiggyBanks/PiggyBanks.Tests/PiggyBanks.Tests.csproj
+++ b/Microservices/PiggyBanks/PiggyBanks.Tests/PiggyBanks.Tests.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\FinanceControlinator.Tests\FinanceControlinator.Tests.csproj" />
     <ProjectReference Include="..\PiggyBanks.Application\PiggyBanks.Application.csproj" />
     <ProjectReference Include="..\PiggyBanks.Domain\PiggyBanks.Domain.csproj" />
   </ItemGroup>
