--- a/infra/helm/payments/values.yaml
+++ b/infra/helm/payments/values.yaml
@@ -1,8 +1,8 @@
-microserviceName: invoices
+microserviceName: payments
 replicaCount: 1
 dbUser: sa
 dbPassword: P@ssw0rd!
-image: gumberss/financecontrolinator-invoices:latest
+image: gumberss/financecontrolinator-payments:latest
 rabbit:
   host: amqp://finance-controlinator-rabbitmq/
   password: qPWFKcAX7u
