--- a/infra/helm/payments/Chart.yaml
+++ b/infra/helm/payments/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: invoices
-description: A Helm for Invoices microservices
+name: payments
+description: A Helm for payments microservices
 
 # A chart can be either an 'application' or a 'library' chart.
 #
