feat: returning expenses overview

--- a/Microservices/Expenses/Expenses.Handler/Expenses.Handler.csproj
+++ b/Microservices/Expenses/Expenses.Handler/Expenses.Handler.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Domain\Cqrs\Events\Expenses\Details\" />
     <Folder Include="Domain\Handlers\" />
   </ItemGroup>
 
