--- a/Microservices/Expenses/Expenses.Tests/Expenses.Tests.csproj
+++ b/Microservices/Expenses/Expenses.Tests/Expenses.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="coverlet.msbuild" Version="3.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,7 +21,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\FinanceControlinator.Tests\FinanceControlinator.Tests.csproj" />
+    <ProjectReference Include="..\Expenses.Application\Expenses.Application.csproj" />
     <ProjectReference Include="..\Expenses.Domain\Expenses.Domain.csproj" />
+    <ProjectReference Include="..\Expenses.Handler\Expenses.Handler.csproj" />
   </ItemGroup>
 
 </Project>
