--- a/Microservices/Expenses/Expenses.API/Dockerfile
+++ b/Microservices/Expenses/Expenses.API/Dockerfile
@@ -1,12 +1,12 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-focal AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 EXPOSE 5000
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
 WORKDIR /src
 COPY ["Microservices/Expenses/Expenses.API/Expenses.API.csproj", "Microservices/Expenses/Expenses.API/"]
 COPY ["Microservices/Expenses/Expenses.Domain/Expenses.Domain.csproj", "Microservices/Expenses/Expenses.Domain/"]
