--- a/.github/workflows/expenses.codacy.coverage.pull-request.yml
+++ b/.github/workflows/expenses.codacy.coverage.pull-request.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build
       run: dotnet build Microservices/Expenses/Expenses.Tests/Expenses.Tests.csproj --no-restore
     - name: Test
-      run: dotnet test Microservices/Expenses/Expenses.Tests/Expenses.Tests.csproj --no-build --verbosity normal
+      run: dotnet test Microservices/Expenses/Expenses.Tests/Expenses.Tests.csproj --no-build --verbosity normal --collect:"XPlat Code Coverage"
     - name: Run codacy-coverage-reporter
       uses: codacy/codacy-coverage-reporter-action@v1
       with:
