--- a/.github/workflows/expenses.codacy.coverage.pull-request.yml
+++ b/.github/workflows/expenses.codacy.coverage.pull-request.yml
@@ -25,4 +25,4 @@ jobs:
       uses: codacy/codacy-coverage-reporter-action@v1
       with:
         project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-        coverage-reports: Microservices/Expenses/Expenses.Tests/coverage.cobertura.xml
+        coverage-reports: Microservices/Expenses/Expenses.Tests/test.coverage/**/*.xml
