--- a/.github/workflows/expenses.codacy.coverage.pull-request.yml
+++ b/.github/workflows/expenses.codacy.coverage.pull-request.yml
@@ -20,14 +20,9 @@ jobs:
     - name: Build
       run: dotnet build Microservices/Expenses/Expenses.Tests/Expenses.Tests.csproj --no-restore
     - name: Test
-      run: dotnet test Microservices/Expenses/Expenses.Tests/Expenses.Tests.csproj --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory:"test.coverage"
-    - name: Copy file
-      uses: canastro/copy-action@0.0.2
-      with:
-        source: "Microservices/Expenses/Expenses.Tests/test.coverage/**/coverage.cobertura.xml"
-        target: "Microservices/Expenses/Expenses.Tests/test.coverage/coverage.cobertura.xml"
+      run: dotnet test Microservices/Expenses/Expenses.Tests/Expenses.Tests.csproj --no-build --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
     - name: Run codacy-coverage-reporter
       uses: codacy/codacy-coverage-reporter-action@v1
       with:
         project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-        coverage-reports: Microservices/Expenses/Expenses.Tests/test.coverage/coverage.cobertura.xml
+        coverage-reports: Microservices/Expenses/Expenses.Tests/coverage.cobertura.xml
