chore: adding identitydb to dev docker compose

--- a/infra/dev/docker-compose.yml
+++ b/infra/dev/docker-compose.yml
@@ -62,3 +62,11 @@ services:
     environment:
       SA_PASSWORD: "LeaveMe@l0ne!"
       ACCEPT_EULA: "Y"
+  identitydb:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    container_name: identity-db
+    ports:
+      - "1435:1433"
+    environment:
+      SA_PASSWORD: "HereWeG0Again!"
+      ACCEPT_EULA: "Y"    
