--- a/Microservices/Expenses/Expenses.API/appsettings.Development.json
+++ b/Microservices/Expenses/Expenses.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "ExpensesDbConnection": "Server=localhost;Database=Expenses;User Id=sa;Password=HereWeG0Again!;"
+    "ExpensesDbConnection": "Server=localhost,1433;Database=Expenses;User Id=sa;Password=HereWeG0Again!;"
   },
   "RabbitMq": {
     "Host": "amqp://127.0.0.1:5672/",
@@ -15,5 +15,10 @@
     "_Username": "user",
     "Password": "guest",
     "Username": "guest"
+  },
+  "Jwt": {
+    "Key": "@r3Y0uKidDi/\/M3?fiuh2389rb3yt32hr8t31bh32h87413b",
+    "Issuer": "api.devtest.com",
+    "Audience": "api.expense.com"
   }
 }
