chore: make the jwt key a little larger, if not, it doesen't work (this site help you to understand https://token.dev)

--- a/Microservices/Identity/appsettings.json
+++ b/Microservices/Identity/appsettings.json
@@ -7,14 +7,14 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "@r3Y0uKidDi/\/M3?",
-    "Issuer": "api.dev-test.com",
+    "Key": "@r3Y0uKidDi/\/M3?fiuh2389rb3yt32hr8t31bh32h87413b",
+    "Issuer": "api.devtest.com",
     "ExpenseAud": "api.expense.com",
     "GatewayAud": "api.gateway.com", //future
     "Duration": "120"
   },
   "ConnectionStrings": {
-    "DbConnection": "Data Source=localhost;Initial Catalog=Identity;Integrated Security=True"
+    "IdentityDbConnection": "Server=localhost,1435;Database=Identity;User Id=sa;Password=HereWeG0Again!;"
   }
-  
+
 }
