--- a/Microservices/Invoices/Invoices.Tests/Invoices.Tests.csproj
+++ b/Microservices/Invoices/Invoices.Tests/Invoices.Tests.csproj
@@ -13,6 +13,7 @@
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
