--- a/Microservices/Invoices/Invoices.API/appsettings.Development.json
+++ b/Microservices/Invoices/Invoices.API/appsettings.Development.json
@@ -17,5 +17,10 @@
     "Password": "guest",
     "Username": "guest"
 
+  },
+  "Jwt": {
+    "Key": "@r3Y0uKidDi/\/M3?fiuh2389rb3yt32hr8t31bh32h87413b",
+    "Issuer": "api.devtest.com",
+    "Audience": "api.invoice.com"
   }
 }
