--- a/Microservices/Expenses/Expenses.API/appsettings.Development.json
+++ b/Microservices/Expenses/Expenses.API/appsettings.Development.json
@@ -19,6 +19,6 @@
   "Jwt": {
     "Key": "@r3Y0uKidDi/\/M3?fiuh2389rb3yt32hr8t31bh32h87413b",
     "Issuer": "api.devtest.com",
-    "Audience": "api.expense.com"
+    "Audience": "api.expense.com",
   }
 }
