test: adding xunit categories discovery

--- a/Microservices/Expenses/Expenses.IntegrationTests/Expenses.IntegrationTests.csproj
+++ b/Microservices/Expenses/Expenses.IntegrationTests/Expenses.IntegrationTests.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.8" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\FinanceControlinator.Authentication\FinanceControlinator.Authentication.csproj" />
+    <ProjectReference Include="..\..\..\Common\FinanceControlinator.Tests\FinanceControlinator.Tests.csproj" />
     <ProjectReference Include="..\Expenses.API\Expenses.API.csproj" />
   </ItemGroup>
 
