--- a/Microservices/Invoices/Invoices.API/Properties/launchSettings.json
+++ b/Microservices/Invoices/Invoices.API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5003;http://localhost:5002;http://192.168.1.102:5148"
+      "applicationUrl": "https://localhost:5003;http://localhost:5002"
     }
   }
 }
