--- a/Microservices/Invoices/Invoices.Application/Invoices.Application.csproj
+++ b/Microservices/Invoices/Invoices.Application/Invoices.Application.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CleanHandling" Version="1.0.8" />
+    <PackageReference Include="CleanHandling" Version="1.0.9" />
   </ItemGroup>
 
   <ItemGroup>
